fix overflow

--- a/labs/olympic/css/main.css
+++ b/labs/olympic/css/main.css
@@ -223,7 +223,7 @@ ul, ol {
 }
 
 #world-statics {
-	height: 650px;
+	/*height: 650px;*/
 }
 
 #topCountryCount {
